--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
 		<div class="col-sm-4">
           <div class="team-member">
             <img class="mx-auto rounded-circle" src="img/team/4.jpg" alt="">
-            <h4>Cristian Zea</h4>
+            <h4>Crhistian Zea</h4>
             <p class="text-muted">Lead Developer</p>
             <ul class="list-inline social-buttons">
               <li class="list-inline-item">
