--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
 		<div class="col-sm-4">
           <div class="team-member">
             <img class="mx-auto rounded-circle" src="img/team/5.jpg" alt="">
-            <h4>Yvan </h4>
+            <h4>Yván Pérez</h4>
             <p class="text-muted">Lead Developer</p>
             <ul class="list-inline social-buttons">
               <li class="list-inline-item">
